--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
     
-    <link rel="stylesheet" href="/abell-css-twind/css/global.css?f27d-c6cf-c804" />
+    <link rel="stylesheet" href="/abell-css-twind/css/global.css?f1bd-20fe-998c" />
     <link rel="icon" href="/abell-css-twind/images/favicon.svg" />
 
     
