--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
     
-    <link rel="stylesheet" href="/abell-css-twind/css/global.css?6711-664d-b14c" />
+    <link rel="stylesheet" href="/abell-css-twind/css/global.css?6d6e-e7a7-896d" />
     <link rel="icon" href="/abell-css-twind/images/favicon.svg" />
 
     
