--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
     
-    <link rel="stylesheet" href="/abell-css-twind/css/global.css?796e-610c-0383" />
+    <link rel="stylesheet" href="/abell-css-twind/css/global.css?a936-5caf-a08a" />
     <link rel="icon" href="/abell-css-twind/images/favicon.svg" />
 
     
