--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
     
-    <link rel="stylesheet" href="/abell-css-twind/css/global.css?0e55-0a93-17d4" />
+    <link rel="stylesheet" href="/abell-css-twind/css/global.css?96c6-fb94-43a7" />
     <link rel="icon" href="/abell-css-twind/images/favicon.svg" />
 
     
